2006-03-28  John W. Eaton  <jwe@octave.org>

	* DLD-FUNCTIONS/matrix_type.cc: Update copyright notice and FSF
	address.

2006-03-24  John W. Eaton  <jwe@octave.org>

	* DLD-FUNCTIONS/spchol.cc (Fsymbfact): Use CHOLMOD_NAME to select
	proper version of row_subtree function.

	* ov-cell.cc (octave_cell::save_hdf5): Use OSSTREAM instead of
	fixed character buffer and sprintf.
	* ov-list.cc (octave_list::save_hdf5, octave_list::save_ascii,
	octave_list::save_binary): Likewise.

	* ov-cell.h (octave_cell::convert_to_str_internal):
	Undo previous change for pad arg.
	* ov-cell.cc (octave_cell::all_strings): Reinstate pad arg, pass
	it on to all_strings.
	* ov.h (octave_value::all_strings): Reinstate pad arg.
	* ov-base.cc (octave_base_value::all_strings): Likewise.
	* ov-str-mat.cc (octave_char_matrix_str::all_strings): Likewise.
	* ov.h, ov-base.h, ov-cell.h, ov-str-mat.h: Fix all_strings decls.

2005-10-25  David Bateman  <dbateman@free.fr>

        * data.cc (do_cat): With 1 arg, return [](0x0) for compatibility.

2006-03-23  John W. Eaton  <jwe@octave.org>

	* version.h (OCTAVE_VERSION): Now 2.9.5+.

2006-03-22  John W. Eaton  <jwe@octave.org>

	* version.h (OCTAVE_VERSION): Now 2.9.5.
	(OCTAVE_API_VERSION): Now api-v18.
	(OCTAVE_RELEASE_DATE): Now 2006-03-22.

2006-03-21  John W. Eaton  <jwe@octave.org>

	* ov-cell.h (octave_cell::convert_to_str_internal):
	Ignore pad and force args.
	* ov-cell.cc (octave_cell::all_strings): Delete args.  Never pad.
	* ov-base.cc (octave_base_value::all_strings): Delete args.
	Always force string conversion, never pad.
	* ov-str-mat.cc (octave_char_matrix_str::all_strings):
	Delete args.  Don't strip whitespace.
	* ov.h, ov-base.h, ov-cell.h, ov-str-mat.h: Fix all_strings decls.
	* strfns.cc (Fchar): No args for all_strings.

2006-03-21  David bateman  <dbateman@free.fr>

	* DLD-FUNCTIONS/getrusage.cc (Fgetrusage): Use GetProcessTimes for
	MinGW to obtain user and system times.

2006-03-17  John W. Eaton  <jwe@octave.org>
